change java 16 to java 11 stream method